src/linter/checks/snapshots/notabene__linter__checks__structure__tests__duplicate_title-2.snap
---
source: src/linter/checks/structure.rs
expression: linter.lint(&changelog)
---
- rule: DuplicateTitle
  location:
    start: 2
    end: 11
  path: ~
