src/linter/checks/snapshots/notabene__linter__checks__structure__tests__duplicate_unreleased-2.snap
---
source: src/linter/checks/structure.rs
expression: linter.lint(&changelog)
---
- rule: DuplicateUnreleased
  location:
    start: 1
    end: 18446744073709551615
  path: ~
