src/linter/checks/snapshots/notabene__linter__checks__structure__tests__invalid_title-2.snap
---
source: src/linter/checks/structure.rs
expression: "lint(&changelog, &ruleset, None)"
---
- rule: InvalidTitle
  span:
    start: 1
    end: 18446744073709551615
  path: ~
