src/linter/checks/snapshots/notabene__linter__checks__structure__tests__invalid_unreleased_position-2.snap
---
source: src/linter/checks/structure.rs
expression: linter.lint(&changelog)
---
- rule: InvalidUnreleasedPosition
  location:
    start: 1
    end: 18446744073709551615
  path: ~
