src/linter/checks/snapshots/notabene__linter__checks__structure__tests__missing_title.snap
---
source: src/linter/checks/structure.rs
expression: "lint(&changelog, &ruleset)"
---
- rule: MissingTitle
  span: ~
  path: ~
