src/linter/checks/snapshots/notabene__linter__checks__structure__tests__missing_unreleased.snap
---
source: src/linter/checks/structure.rs
expression: linter.lint(&changelog)
---
- rule: MissingUnreleased
  location: ~
  path: ~
