src/linter/checks/snapshots/notabene__linter__checks__structure__tests__unreleased_not_first-2.snap
---
source: src/linter/checks/structure.rs
expression: "linter.lint(&changelog)"
---
- rule: UnreleasedOutOfOrder
  span:
    start: 1
    end: 18446744073709551615
  path: ~
